--- a/doc/naaclhlt2018-latex/paper.bib
+++ b/doc/naaclhlt2018-latex/paper.bib
@@ -164,7 +164,7 @@ url="https://doi.org/10.3758/s13428-012-0210-4"
 	Year = {1972}}
 
 @inproceedings{Tubridy:2018ab,
-	Author = {Tubridy, S. and Halpern, D. and Wang, V. and Gasser, C. and Osborn-Popp, P. and Davachi, L. and Gureckis, T.M.},
+	Author = {Tubridy, S. and Halpern, D. and Wang, V. and Gasser, C. and Osborn Popp, P. and Davachi, L. and Gureckis, T.M.},
 	Booktitle = {Proceedings of Educational Data Mining (EDM) 2018},
 	Date-Added = {2018-03-22 03:09:36 +0000},
 	Date-Modified = {2018-03-22 03:11:04 +0000},
