--- a/doc/naaclhlt2018-latex/paper.tex
+++ b/doc/naaclhlt2018-latex/paper.tex
@@ -17,6 +17,7 @@
 \usepackage{latexsym}
 \usepackage{graphicx}
 \usepackage{soul}
+\usepackage{color}
 
 \usepackage{url}
 
@@ -44,7 +45,18 @@
 \begin{document}
 \maketitle
 \begin{abstract}
-This is the abstract
+Psychological research on learning and memory
+has tended to emphasize small-scale laboratory
+studies.  However, large datasets of people using 
+educational software provide opportunities to explore
+these issues from a new perspective.  In this paper we
+describe our approach to the Duolingo Second Language
+Acquisition Modeling (SLAM) competition which was run in
+early 2018.   After detailing our modeling approach and a number of
+supplementary simulations, we
+reflect on which aspects of our reasonably
+successful model are substantively
+informed by findings and theories from the psychological literature.
 \end{abstract}
 
 \section{Introduction}
@@ -52,7 +64,7 @@ This is the abstract
 Educational software that aims to teach people new skills, languages, and
 academic subjects have become increasingly popular.  The wide-spread
 deployment of these tools has created interesting opportunities to study
-the process of learning in extremely large samples of learners in naturalistic
+the process of language acquisition in extremely large samples of learners in naturalistic
 situations. The Duolingo shared task on Second Lanugage Acquisition Modeling (SLAM)
 was a competitive modeling challenge run in early 2018~\cite{slam18}.
 The challenge, organized by Duolingo\footnote{http://duolingo.com}, a popular second
@@ -66,33 +78,49 @@ This paper reports the approach used by our team which ended in third place
 for the {\tt en\_es} data set, second place for {\tt es\_en}, and third place
 for {\tt fr\_en}.
 
-Our lab's interest in this competition comes from our emphasis on studying human learning
-and memory from a psychological perspective.  While the Duolingo SLAM dataset 
-heavily emphasizes language learning (e.g., syntax, grammar, semantics), it also touches on
-basic learning and memory phenomena (e.g., retrieval of the translated
-word from memory).  The study of the psychological processes supporting second-language 
-acquisition has long been a topic of interest in the learning and memory literature~\cite[e.g.,]{Atkinson:1972rm,Atkinson:1972rz,Pavlik:2008rm}.
-In fact, much of the classic work on the psychology of memory involved aspects of verbal
-language learning, which helped to identify a number of important and robust phenomena
-in memory including the retention curve and the advantage for spaced
-over massed practice~\cite{Ruth:1928aa,Rubin:1996aa,Cepeda:2006aa}.
-
-\hl{ Todd: I want to transition to something about how our approach tried to stick to some
-psychological principles but i'm not sure... maybe need to wait until al the later sections
-are fleshed out to lay out what the "concept" is behind our approach}.
-
-\hl{One idea is to talk about while the research on learnign and memory is important
-it might be hard to graft those principles into datasets like these because of 
-subject variability, etc... As a result it is unlikely that straightfoward
-cognitive models will work but instead need to combine maching learning methods
-that can create much more complex rules and decisions with features that reflect
-aspects of what makes something easy or hard to learn.}
 
 
-\cite{Tubridy:2018aa}
-\cite{Tubridy:2018ab}
-\cite{Corbett1995bkt}
-\cite{Roediger2006te,Anderson1994rif,Mozer:2009cs}
+Learning and memory has been a core focus of psychological science for
+over 100 years. Most of this work has sought to build explanatory theories of human learning
+and memory using relatively small-scale laboratory studies.  Such studies have
+identified a number of important and apparently robust phenomena in memory including
+the nature of the retention curve~\cite{Rubin:1996aa}, the advantage for spaced over massed 
+practice~\cite{Ruth:1928aa,Cepeda:2006aa,Mozer:2009cs}, the testing effect~\cite{Roediger2006te},
+and retrieval-induced forgetting~\cite{Anderson1994rif}.
+The advent of large datasets such as the one provided in the Duolingo SLAM challenge
+may offer a new perspective and approach which may prove complementary
+to laboratory scale science~\cite{Griffiths:2015aa,Goldstone:2016aa}.  First, the much
+larger sample sizes may help to better identify parameters of psychological models.
+Second, datasets covering more naturalistic learning situations may allow us to test 
+the predictive accuracy of psychological theories in a more generalizable fashion~\cite{Yarkoni:2017aa}.
+
+Despite these promising opportunities, it remains unclear how much of current psychological
+theory might be important for tasks such as the Duolingo SLAM challenge.
+As one example, the field of education data mining which has attempted to build
+predictive models of student learning have found excellent results using
+deep neural networks~\cite[so called ``deep knowledge tracing",][]{Piech:2015aa} 
+as opposed to more traditional, and interpretable, models and approaches
+that are rooted in cognitive science~\cite[e.g.,][]{Atkinson:1972rm,Atkinson:1972rz,Corbett1995bkt,Pavlik:2008rm,Tubridy:2018ab}. 
+Recently, Khajah, Lindsey, \& Mozer (2016) compared deep knowledge tracing (DKT) to a more
+standard ``Bayesian knowledge tracing" (BKT) models and showed
+that it was possible to equate the performance of the the BKT model by additional 
+features and parameters that represent core aspects of the psychology of learning
+and memory such as forgetting~\cite{Khajah2016hdnt}.
+
+Our entry to SLAM borrowed conceptually from the Khajah et al. (2016) approach.
+Specifically we started with a relatively well known and powerful classification algorithm~\cite[gradient
+boosting decision trees, GBDT,][]{ke2017lightgbm}.  This algorithm has some advantages
+over deep learning approach including the fact that the \hl{inferred decision rules are
+interpretable after the model is fit} while still being able to model relatively complex
+decision criteria.  We then created a number of new features for the SLAM
+the dataset covering aspect such as user perseverance, learning processes, 
+contextual factors, and cognate similarity.  After finding a model which provided the best
+held-out performance on the test data set, we conducted a number of ``lesioning" studies where
+we selectively removed features from the model and re-estimated the parameters in order
+to assess the contribution of particular types of features.  We being by describing our 
+overall modeling approach, and then discuss some fo the lessons learned from our analysis.
+
+
 \section{Task Approach}
 
 We approached the task as a binary classification problem over instances (i.e.,
@@ -128,7 +156,7 @@ particularly near where punctuation had been removed from the sentence. To fix
 this, we re-processed the data using Google SyntaxNet\footnote{https://github.com/ljm625/syntaxnet-rest-api}.)
 
 We also encoded word length and several word characteristics gleaned from
-external data sources. The word frequency effect suggests that uncommon words are harder to process than common words; readers will look longer at low-frequency words and perform worse in word-identification tasks for these than for high-frequency words \cite{rayner1998eye}. We therefore included a feature that encoded the frequency of each word in the language being acquired, calculated from \citet{robert_speer_2017_998161}. A number of studies have also shown that age-of-acquisition is another strong predictor of word processing and lexical retrieval difficulty that is somewhat independent of word frequency \cite{brysbaert2011effects, ferrand2011comparing}. We therefore included mean age-of-acquisition (in English) as a feature, derived from published age-of-acquisition norms for 30,000 English words from \cite{Kuperman2012} which covered many of the words present in the dataset. Additionally, cognates, or words sharing a common linguistic derivation, are easier to learn than words with dissimilar translations \cite{de2000hard}. As an approximate measure of linguistic similarity, we used the Levenshtein edit distance between the word tokens and their translations scaled by the length of the longer word. We found translations using Google Translate\footnote{https://cloud.google.com/translate/} and calculated the Levenshtein distance to reflect the letter-by-letter similarity of the word and its translation \cite{hyyro2001explaining}. 
+external data sources. The word frequency effect suggests that uncommon words are harder to process than common words; readers will look longer at low-frequency words and perform worse in word-identification tasks for these than for high-frequency words \cite{rayner1998eye}. We therefore included a feature that encoded the frequency of each word in the language being acquired, calculated from \citet{robert_speer_2017_998161}. A number of studies have also shown that age-of-acquisition (i.e., the age a which children typically exhibit this word in their vocabulary) is another strong predictor of word processing and lexical retrieval difficulty that is somewhat independent of word frequency \cite{brysbaert2011effects, ferrand2011comparing}. We therefore included mean age-of-acquisition (in English) as a feature, derived from published age-of-acquisition norms for 30,000 English words from \cite{Kuperman2012} which covered many of the words present in the dataset. Additionally, cognates, or words sharing a common linguistic derivation, are easier to learn than words with dissimilar translations \cite{de2000hard}. As an approximate measure of linguistic similarity, we used the Levenshtein edit distance between the word tokens and their translations scaled by the length of the longer word. We found translations using Google Translate\footnote{https://cloud.google.com/translate/} and calculated the Levenshtein distance to reflect the letter-by-letter similarity of the word and its translation \cite{hyyro2001explaining}. 
 
 \subsubsection{User features}
 
@@ -136,11 +164,11 @@ Just as we did for word tokens, we encoded the user ID as a single-column,
 high-cardinality feature. We also calculated several other user-level features that related to the ``learning type'' of a user. In particular, we encoded features to estimate the long-term motivation and diligence of a user. These features could help predict how users interact with old and novel words they encounter.
 
 %Feature 1: Motivation %compute_motivation
-To estimate users' motivation we grouped their exercises into ``bursts.'' Bursts were separated by at least 24 hours.  We used three concrete features about these bursts, namely the mean and median number of exercises within bursts as well as the total number of bursts of a given user. Users that were more motivated had potentially bursts with more exercises. Simultaneously, a larger total number of bursts indicated that the burst length estimate was more trustworthy.
+To estimate users' motivation we grouped their exercises into ``bursts.'' Bursts were separated by at least 24 hours \hl{todd says: did you change my code because bursts were separate by 1 hour in my imementation}.  We used three concrete features about these bursts, namely the mean and median number of exercises within bursts as well as the total number of bursts of a given user. Users that were more motivated had potentially bursts with more exercises. Simultaneously, a larger total number of bursts indicated that the burst length estimate was more trustworthy.
 
 %Feature 2: Consistency %compute_usage_entropy
 
-To estimate users' diligence\hl{consistency?} we speculated that a very diligent user might be using the app regularly at the same time of day, perhaps following a study schedule, compared to a less diligent user whose schedule might vary more. The data set did not provide a variable with the time of day, which would have been an interesting feature on its own. Instead, we were able to extract for each exercise the time of day relative to the first time a user had used the app, ranging from 0 to 1 (with 0 indicating the same time, 0.25 indicating a relative shift by 6 hours, etc.).  We then discretized this variable into 20-minute bins and computed the entropy of the empirical frequency distribution over these bins. A lower entropy score indicated less variability in the times of day a user started their exercises.
+To estimate users' diligence we speculated that a very diligent user might be using the app regularly at the same time of day, perhaps following a study schedule, compared to a less diligent user whose schedule might vary more. The data set did not provide a variable with the time of day, which would have been an interesting feature on its own. Instead, we were able to extract for each exercise the time of day relative to the first time a user had used the app, ranging from 0 to 1 (with 0 indicating the same time, 0.25 indicating a relative shift by 6 hours, etc.).  We then discretized this variable into 20-minute bins and computed the entropy of the empirical frequency distribution over these bins. A lower entropy score indicated less variability in the times of day a user started their exercises.
 
 \subsubsection{Positional features}
 
@@ -156,15 +184,16 @@ root word, a special {\tt None} token or {\tt None} part of speech was used.
 
 A user's probability of succeeding on an instance is likely related to their
 prior experience with that instance. To capture this, we calculated several
-features related to past experience. We encoded the number of times the
-current exercise's exact sentence had been seen before by the user. 
+features related to past experience. 
+
+First, we encoded the number of times the
+current exercise's exact sentence had been seen before by the user. This is
+informed by psychological research showing memory and perceptual processing
+improvement for repeated contexts or chunks~\cite[e.g.,][]{Chun:1999gt} 
+
 We also encoded a set of features recording past experience with
 the particular instance word. These features were encoded separately for the
 instance token and for the instance root word created by lemmatization.
-\cite{Perruchet:1998nw,Chun:1999gt} \hl{chun is good, maybe something other
-that PARSER as it is more a statistcal learning model}
-
-
 For each token (and root) we tracked user performance through four weighted
 error averages. At the user's first encounter of the token, each error term $E$ starts at
 zero. After an encounter with an instance of the token with label $L$, it is
@@ -221,8 +250,7 @@ one and $n$ exercises into the test set.
 their default values.}
 \end{table}
 
-After featurizing the training data, we trained gradient boosting decision
-tree (GBDT) models to minimize log loss. GBDT works by
+After featurizing the training data, we trained GBDT models to minimize log loss. GBDT works by
 iteratively building regression trees, each of which seeks to minimize the
 residual loss from prior trees. This allows it to capture non-linear effects
 and high-order interactions among features. We used the LightGBM\footnote{http://lightgbm.readthedocs.io/} implementation
@@ -350,7 +378,7 @@ well-suited to generating highly accurate predictions from large data sets.
 Because they are designed not for prediction but for explanation, they tend to
 use a small number of input variables and allow those variables to interact
 in limited ways. In contrast, gradient boosted trees, as well as other
-cutting-edge techniques like deep learning. can extract high-level
+cutting-edge techniques like deep learning can extract high-level
 interactions among hundreds of features. Though they are highly opaque, require
 a lot of data, and are not amenable to explanation, these models excel at prediction.
 
@@ -362,20 +390,33 @@ trials based on past errors, then the relationship between future errors and
 past spacing may have differed from that found in the psychological literature
 \cite{Cepeda:2006aa}.
 
-Finally, a task in which more true generalization was required might have
+Finally, a task in which braoder generalization was required might have
 allowed psychologically inspired features to perform more competitively. In this
 task, there is a large amount of labeled training data for every user and for
-most words. This allow simple ID-based features to work. However, for a
-newly-encountered user or word, an ID is useless. Theory-driven features, in
-contrast, can generalize to new settings. Thus, if we were asked to generalize to
+most words. This allow simple ID-based features to work because the past
+history of a user will likely influence their future performance. However, for a
+newly-encountered user or word, such an ID is useless because there will be
+not relevant parameter estimate. Theory-driven features, in
+contrast, can often generalize to new settings because they capture more
+generic aspects of the learning task.  For example, if we were asked to generalize to
 a completely new language such as German, many parts of our model would falter
 but word frequency, age of acquisition, and Levenshtein distance to
-first-language translation would still likely be predictive.
+first-language translation would still likely prove to be features which
+have high predictive utility.
 
+In sum, we believe that the Duolingo SLAM dataset and challenge provide
+interesting opportunities for cognitive science and psychology.  One particularly
+useful paradigm is to use large-scale, predictive challenges like this one
+to identify the features or variables that are possibly important for learning.
+Then, complementary laboratory scale studies can be conducted which
+establish the causal status of such features through controlled experimentation.
+\hl{Or something more positive to end on?}
 
 \section{Acknowledgments}
-This research was supported by NSF grant DRL-1631436 and
-seed funds from the NYU Dean for Science.
+This research was supported by NSF grant DRL-1631436 and BCS-1255538,
+and the John S. McDonnell Foundation Scholar Award to TMG.  We thank
+Shannon Tubridy and Tal Yarkoni for helpful suggestions in the development
+of this work.
 
 \bibliography{paper}
 \bibliographystyle{acl_natbib}
