--- a/doc/naaclhlt2018-latex/paper.tex
+++ b/doc/naaclhlt2018-latex/paper.tex
@@ -70,7 +70,7 @@ was a competitive modeling challenge run in early 2018~\cite{slam18}.
 The challenge, organized by Duolingo\footnote{http://duolingo.com}, a popular second
 language learning app, was
 to use log data from thousands of users completing millions of exercises to 
-predict patterns of future translation mistakes in held-out data.  The data set was
+predict patterns of future translation mistakes in held-out data.  The data was
 divided into three sets covering Spanish speakers learning English ({\tt en\_es}),
 English speakers learning Spanish ({\tt es\_en}), and English speakers learning
 French ({\tt fr\_en}).
@@ -118,7 +118,7 @@ contextual factors, and cognate similarity.  After finding a model which provide
 held-out performance on the test data set, we conducted a number of ``lesioning" studies where
 we selectively removed features from the model and re-estimated the parameters in order
 to assess the contribution of particular types of features.  We being by describing our 
-overall modeling approach, and then discuss some fo the lessons learned from our analysis.
+overall modeling approach, and then discuss some of the lessons learned from our analysis.
 
 
 \section{Task Approach}
