--- a/doc/naaclhlt2018-latex/paper.bib
+++ b/doc/naaclhlt2018-latex/paper.bib
@@ -272,6 +272,17 @@
 	Title = {Do the effects of subjective frequency and age of acquisition survive better word frequency norms?},
 	Volume = {64},
 	Year = {2011}}
+	
+@article{godden1975context,
+  title={Context-dependent memory in two natural environments: On land and underwater},
+  author={Godden, Duncan R and Baddeley, Alan D},
+  journal={British Journal of psychology},
+  volume={66},
+  number={3},
+  pages={325--331},
+  year={1975},
+  publisher={Wiley Online Library}
+}
 
 @article{ferrand2011comparing,
 	Author = {Ferrand, Ludovic and Brysbaert, Marc and Keuleers, Emmanuel and New, Boris and Bonin, Patrick and M{\'e}ot, Alain and Augustinova, Maria and Pallier, Christophe},
