--- a/doc/naaclhlt2018-latex/paper.tex
+++ b/doc/naaclhlt2018-latex/paper.tex
@@ -103,24 +103,23 @@ As one example, the field of education data mining which has attempted to build
 predictive models of student learning have found excellent results using
 deep neural networks~\cite[so called ``deep knowledge tracing",][]{Piech:2015aa} 
 as opposed to more traditional, and interpretable, models and approaches
-that are rooted in cognitive science~\cite[e.g.,][]{Atkinson:1972rm,Atkinson:1972rz,Corbett1995bkt,Pavlik:2008rm,Tubridy:2018ab}. 
-Recently, Khajah, Lindsey, \& Mozer (2016) compared deep knowledge tracing (DKT) to a more
+that are rooted in cognitive science~\cite[e.g.,][]{Atkinson:1972rm,Atkinson:1972rz,Corbett1995bkt,Pavlik:2008rm}. Recently, Khajah, Lindsey, \& Mozer (2016) compared deep knowledge tracing (DKT) to a more
 standard ``Bayesian knowledge tracing" (BKT) models and showed
 that it was possible to equate the performance of the the BKT model by additional 
 features and parameters that represent core aspects of the psychology of learning
 and memory such as forgetting~\cite{Khajah2016hdnt}.
 
-Our entry to SLAM borrowed conceptually from the Khajah et al. (2016) approach.
+Our entry to SLAM borrowed conceptually from the Khajah et al. (2016) approach. 
 Specifically we used a relatively well known and powerful classification
 algorithm: gradient boosting decision trees~\cite[GBDT][]{ke2017lightgbm}.  Like
 deep learning, this algorithm can extract complex interactions among features,
 but it has some advantages including faster training and easier integration of
-diverse inputs. We then created a number of new features for the SLAM
+diverse inputs. We then created a number of new psychologically-grounded features for the SLAM
 dataset covering aspect such as user perseverance, learning processes, 
 contextual factors, and cognate similarity.  After finding a model which provided the best
 held-out performance on the test data set, we conducted a number of ``lesioning" studies where
 we selectively removed features from the model and re-estimated the parameters in order
-to assess the contribution of particular types of features.  We being by describing our 
+to assess the contribution of particular types of features.  We begin by describing our 
 overall modeling approach, and then discuss some of the lessons learned from our analysis.
 
 
@@ -159,26 +158,21 @@ particularly near where punctuation had been removed from the sentence. To fix
 this, we re-processed the data using Google SyntaxNet\footnote{https://github.com/ljm625/syntaxnet-rest-api}.)
 
 We also encoded word length and several word characteristics gleaned from
-external data sources. Past research suggests that uncommon words are harder to process than common words; readers will look longer at low-frequency words and perform worse in word-identification tasks for these than for high-frequency words \cite{rayner1998eye}. We therefore included a feature that encoded the frequency of each word in the language being acquired, calculated from \citet{robert_speer_2017_998161}. A number of studies have also shown that age-of-acquisition (i.e., the age a which children typically exhibit this word in their vocabulary) is another strong predictor of word processing and lexical retrieval difficulty that is somewhat independent of word frequency \cite{brysbaert2011effects, ferrand2011comparing}. We therefore included mean age-of-acquisition (in English) as a feature, derived from published age-of-acquisition norms for 30,000 English words from \cite{Kuperman2012} which covered many of the words present in the dataset. Additionally, cognates, or words sharing a common linguistic derivation, are easier to learn than words with dissimilar translations \cite{de2000hard}. As an approximate measure of linguistic similarity, we used the Levenshtein edit distance between the word tokens and their translations scaled by the length of the longer word. We found translations using Google Translate\footnote{https://cloud.google.com/translate/} and calculated the Levenshtein distance to reflect the letter-by-letter similarity of the word and its translation \cite{hyyro2001explaining}. 
+external data sources. Past research has suggested some features of words that determine how hard words are to process, as measured by how long readers look at the word and performance in lexical decision and word identification tasks. Two such features that have somewhat independent effects are word frequency (how often the word occurs in natural language) \cite{rayner1998eye} and age-of-acquisition (the age at which children typically exhibit the word in their vocabulary) \cite{brysbaert2011effects, ferrand2011comparing}. We therefore included a feature that encoded the frequency of each word in the language being acquired, calculated from \citet{robert_speer_2017_998161} and a feature that encoded mean age-of-acquisition (in English), derived from published age-of-acquisition norms for 30,000 English words \cite{Kuperman2012} which covered many of the words present in the dataset. Additionally, cognates, or words sharing a common linguistic derivation, are easier to learn than words with dissimilar translations \cite{de2000hard}. As an approximate measure of linguistic similarity, we used the Levenshtein edit distance between the word tokens and their translations scaled by the length of the longer word. We found translations using Google Translate\footnote{https://cloud.google.com/translate/} and calculated the Levenshtein distance to reflect the letter-by-letter similarity of the word and its translation \cite{hyyro2001explaining}. 
 
 \subsubsection{User features}
 
 Just as we did for word tokens, we encoded the user ID as a single-column,
-high-cardinality feature. We also calculated several other user-level features that related to the ``learning type'' of a user. In particular, we encoded features to estimate the long-term motivation and diligence of a user. These features could help predict how users interact with old and novel words they encounter.
+high-cardinality feature. We also calculated several other user-level features that related to the ``learning type'' of a user. In particular, we encoded features that might be related to constructs such as the motivation and diligence of a user. These features could help predict how users interact with old and novel words they encounter.
 
 %Feature 1: Motivation %compute_motivation
-To estimate users' motivation we grouped their exercises into ``bursts.'' Bursts
-were separated by at least 24 hours \hl{todd says: did you change my code
-  because bursts were separate by 1 hour in my imementation}.  We used three
+As a proxy for motivation, we speculated that more motivated users would complete more exercises every time they decide to use the app. To estimate this, we grouped each user's exercises into ``bursts.'' Bursts were separated by at least 24 hours \hl{todd says: did you change my code
+because bursts were separate by 1 hour in my imementation}.  We used three
 concrete features about these bursts, namely the mean and median number of
-exercises within bursts as well as the total number of bursts of a given user.
-We hypothesized that more motivated users may have bursts with more exercises.
-Simultaneously, a larger total number of bursts indicated that the burst length
-estimate was more trustworthy.
+exercises within bursts as well as the total number of bursts of a given user (to give the model a feature related to the uncertainty in the central tendency estimates).
 
 %Feature 2: Consistency %compute_usage_entropy
-
-To estimate users' diligence we speculated that a very diligent user might be using the app regularly at the same time of day, perhaps following a study schedule, compared to a less diligent user whose schedule might vary more. The data set did not provide a variable with the time of day, which would have been an interesting feature on its own. Instead, we were able to extract for each exercise the time of day relative to the first time a user had used the app, ranging from 0 to 1 (with 0 indicating the same time, 0.25 indicating a relative shift by 6 hours, etc.).  We then discretized this variable into 20-minute bins and computed the entropy of the empirical frequency distribution over these bins. A lower entropy score indicated less variability in the times of day a user started their exercises.
+As a proxy for diligence, we speculated that a very diligent user might be using the app regularly at the same time of day, perhaps following a study schedule, compared to a less diligent user whose schedule might vary more. The data set did not provide a variable with the time of day, which would have been an interesting feature on its own. Instead, we were able to extract for each exercise the time of day relative to the first time a user had used the app, ranging from 0 to 1 (with 0 indicating the same time, 0.25 indicating a relative shift by 6 hours, etc.).  We then discretized this variable into 20-minute bins and computed the entropy of the empirical frequency distribution over these bins. A lower entropy score indicated less variability in the times of day a user started their exercises. An alternative interpretation of the entropy of study schedule parameter described above is that it also relates to context-dependent memory, i.e. if the user uses the app at the same time every day they are more likely to be in the same physical location when they are using the app \cite{godden1975context}.
 
 \subsubsection{Positional features}
 
@@ -199,7 +193,7 @@ features related to past experience.
 First, we encoded the number of times the
 current exercise's exact sentence had been seen before by the user. This is
 informed by psychological research showing memory and perceptual processing
-improvement for repeated contexts or chunks~\cite[e.g.,][]{Chun:1999gt} 
+improvement for repeated contexts or chunks~\cite[e.g.,][]{Chun:1999gt}. 
 
 We also encoded a set of features recording past experience with
 the particular instance word. These features were encoded separately for the
