--- a/doc/naaclhlt2018-latex/paper.bib
+++ b/doc/naaclhlt2018-latex/paper.bib
@@ -154,6 +154,40 @@
 	Title = {Predicting the optimal spacing of study: A multiscale context model of memory},
 	Year = {2009}}
 
+@inproceedings{Tang:2016:DNN,
+ author = {Tang, Steven and Peterson, Joshua C. and Pardos, Zachary A.},
+ title = {Deep Neural Networks and How They Apply to Sequential Education Data},
+ booktitle = {Proceedings of the Third (2016) ACM Conference on Learning @ Scale},
+ series = {L@S '16},
+ year = {2016},
+ isbn = {978-1-4503-3726-7},
+ location = {Edinburgh, Scotland, UK},
+ pages = {321--324},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/2876034.2893444},
+ doi = {10.1145/2876034.2893444},
+ acmid = {2893444},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {deep learning, educational data mining, long short-term memory},
+} 
+@inproceedings{xiong2016going,
+  title={Going Deeper with Deep Knowledge Tracing.},
+  author={Xiong, Xiaolu and Zhao, Siyuan and Van Inwegen, Eric and Beck, Joseph},
+  booktitle={EDM},
+  pages={545--550},
+  year={2016}
+}
+
+@inproceedings{zhang2017incorporating,
+  title={Incorporating rich features into deep knowledge tracing},
+  author={Zhang, Liang and Xiong, Xiaolu and Zhao, Siyuan and Botelho, Anthony and Heffernan, Neil T},
+  booktitle={Proceedings of the Fourth (2017) ACM Conference on Learning@ Scale},
+  pages={169--172},
+  year={2017},
+  organization={ACM}
+}
+
 @article{Anderson1994rif,
 	Author = {Anderson, Michael C and Bjork, Robert A and Bjork, Elizabeth L},
 	Date-Added = {2018-03-22 03:18:37 +0000},
