edits from Anselm

--- a/doc/naaclhlt2018-latex/paper.bib
+++ b/doc/naaclhlt2018-latex/paper.bib
@@ -200,7 +200,7 @@
 
 @article{Roediger2006te,
 	Abstract = { Taking a memory test not only assesses what one knows, but also enhances later retention, a phenomenon known as the testing effect. We studied this effect with educationally relevant materials and investigated whether testing facilitates learning only because tests offer an opportunity to restudy material. In two experiments, students studied prose passages and took one or three immediate free-recall tests, without feedback, or restudied the material the same number of times as the students who received tests. Students then took a final retention test 5 min, 2 days, or 1 week later. When the final test was given after 5 min, repeated studying improved recall relative to repeated testing. However, on the delayed tests, prior testing produced substantially greater retention than studying, even though repeated studying increased students' confidence in their ability to remember the material. Testing is a powerful means of improving learning, not just assessing it. },
-	Author = {Henry L. Roediger, III and Jeffrey D. Karpicke},
+	Author = {Henry L. Roediger and Jeffrey D. Karpicke},
 	Date-Added = {2018-03-22 03:18:21 +0000},
 	Date-Modified = {2018-03-22 03:18:21 +0000},
 	Doi = {10.1111/j.1467-9280.2006.01693.x},
