--- a/doc/naaclhlt2018-latex/paper.tex
+++ b/doc/naaclhlt2018-latex/paper.tex
@@ -111,15 +111,16 @@ features and parameters that represent core aspects of the psychology of learnin
 and memory such as forgetting and individual abilities~\cite{Khajah2016hdnt}. An ongoing debate remains in this community 
 whether using flexible models with lots of data can improve over more heavily structured, theory-based models \cite{Tang:2016:DNN, xiong2016going, zhang2017incorporating}.
 
-We positioned our entry to SLAM somewhat in between the above mentioned approaches by using 
-psychologically inspired features in a fairly flexible model. 
-Specifically we used a relatively well known and powerful classification
-algorithm: gradient boosting decision trees~\cite[GBDT][]{ke2017lightgbm}.  Like
-deep learning, this algorithm can extract complex interactions among features,
+For our approach to the SLAM competition, we decided to use a generic and fairly flexible model structure that we provided with hand-coded, psychologically inspired features.
+We therefore positioned our entry to SLAM somewhat in between the approaches mentioned above.
+Specifically, we used gradient boosting decision trees~\cite[GBDT][]{ke2017lightgbm} for the model structure, which is a powerful classification algorithm that is known to perform well across various kinds of data sets.  Like
+deep learning, GBDT can extract complex interactions among features,
 but it has some advantages including faster training and easier integration of
-diverse inputs. We then created a number of new psychologically-grounded features for the SLAM
+diverse inputs. 
+
+We then created a number of new psychologically-grounded features for the SLAM
 dataset covering aspect such as user perseverance, learning processes, 
-contextual factors, and cognate similarity.  After finding a model which provided the best
+contextual factors, and cognate similarity.  After finding a model that provided the best
 held-out performance on the test data set, we conducted a number of ``lesioning" studies where
 we selectively removed features from the model and re-estimated the parameters in order
 to assess the contribution of particular types of features.  We begin by describing our 
@@ -128,10 +129,10 @@ overall modeling approach, and then discuss some of the lessons learned from our
 
 \section{Task Approach}
 
-We approached the task as a binary classification problem over instances (i.e.,
-single words within an exercise). Our solution can be divided into two
-components---constructing a set of features that is highly informative about
-whether the user will answer an instance correctly, and designing a model that
+We approached the task as a binary classification problem over instances. Each instance was
+a single word within a sentence of a translation exercise and the classification problem was to predict whether a user would translate the word correctly or not. Our approach can be divided into two
+components---constructing a set of features that is informative about
+whether a user will answer an instance correctly, and designing a model that
 can achieve high performance using this feature set.
 
 \subsection{Feature Engineering}
@@ -155,13 +156,13 @@ preserved in single columns and handled in this form by the model (as described
 below).
 
 Along with the tokens themselves we encoded each instance word's part of speech,
-morphological features, and dependency edge label. (We noticed that some words
+morphological features, and dependency edge label. We noticed that some words
 in the original dataset were paired with the wrong morphological features,
 particularly near where punctuation had been removed from the sentence. To fix
-this, we re-processed the data using Google SyntaxNet\footnote{https://github.com/ljm625/syntaxnet-rest-api}.)
+this, we re-processed the data using Google SyntaxNet\footnote{https://github.com/ljm625/syntaxnet-rest-api}.
 
 We also encoded word length and several word characteristics gleaned from
-external data sources. Past research in psychology has suggested some features of words that determine how hard the word are to process, as measured by how long readers look at the word and performance in lexical decision and word identification tasks. Two such features that have somewhat independent effects are word frequency (how often the word occurs in natural language) \cite{rayner1998eye} and age-of-acquisition (the age at which children typically exhibit the word in their vocabulary) \cite{brysbaert2011effects, ferrand2011comparing}. We therefore included a feature that encoded the frequency of each word in the language being acquired, calculated from \citet{robert_speer_2017_998161} and a feature that encoded mean age-of-acquisition (in English), derived from published age-of-acquisition norms for 30,000 English words \cite{Kuperman2012} which covered many of the words present in the dataset. Additionally, cognates, or words sharing a common linguistic derivation, are easier to learn than words with dissimilar translations \cite{de2000hard}. As an approximate measure of linguistic similarity, we used the Levenshtein edit distance between the word tokens and their translations scaled by the length of the longer word. We found translations using Google Translate\footnote{https://cloud.google.com/translate/} and calculated the Levenshtein distance to reflect the letter-by-letter similarity of the word and its translation \cite{hyyro2001explaining}. 
+external data sources. Research in psychology has suggested certain word features that play a role in how difficult a word is to process, as measured by how long readers look at the word as well as people's performance in lexical-decision and word-identification tasks. Two such features that have somewhat independent effects are word frequency \cite[i.e., how often does the word occur in natural language;][]{rayner1998eye} and age-of-acquisition \cite[i.e., the age at which children typically exhibit the word in their vocabulary;][]{brysbaert2011effects, ferrand2011comparing}. We therefore included a feature that encoded the frequency of each word in the language being acquired, calculated from \citet{robert_speer_2017_998161}, and a feature that encoded the mean age-of-acquisition (of the English word, in English native speakers), derived from published age-of-acquisition norms for 30,000 words \cite{Kuperman2012}, which covered many of the words present in the dataset. Additionally, words sharing a common linguistic derivation (also called ``cognates''; e.g., ``secretary'' in English and ``secretario'' in Spanish), are easier to learn than words with dissimilar translations \cite{de2000hard}. As an approximate measure of linguistic similarity, we used the Levenshtein edit distance between the word tokens and their translations scaled by the length of the longer word. We found translations using Google Translate\footnote{https://cloud.google.com/translate/} and calculated the Levenshtein distance to reflect the letter-by-letter similarity of the word and its translation \cite{hyyro2001explaining}. 
 
 \subsubsection{User features}
 
@@ -174,7 +175,9 @@ concrete features about these bursts, namely the mean and median number of
 exercises within bursts as well as the total number of bursts of a given user (to give the model a feature related to the uncertainty in the central tendency estimates).
 
 %Feature 2: Consistency %compute_usage_entropy
-As a proxy for diligence, we speculated that a very diligent user might be using the app regularly at the same time of day, perhaps following a study schedule, compared to a less diligent user whose schedule might vary more. The data set did not provide a variable with the time of day, which would have been an interesting feature on its own. Instead, we were able to extract for each exercise the time of day relative to the first time a user had used the app, ranging from 0 to 1 (with 0 indicating the same time, 0.25 indicating a relative shift by 6 hours, etc.).  We then discretized this variable into 20-minute bins and computed the entropy of the empirical frequency distribution over these bins. A lower entropy score indicated less variability in the times of day a user started their exercises. An alternative interpretation of the entropy of study schedule parameter described above is that it also relates to context-dependent memory, i.e. if the user uses the app at the same time every day they are more likely to be in the same physical location when they are using the app \cite{godden1975context}.
+As a proxy for diligence, we speculated that a very diligent user might be using the app regularly at the same time of day, perhaps following a study schedule, compared to a less diligent user whose schedule might vary more. The data set did not provide a variable with the time of day, which would have been an interesting feature on its own. Instead, we were able to extract for each exercise the time of day relative to the first time a user had used the app, ranging from 0 to 1 (with 0 indicating the same time, 0.25 indicating a relative shift by 6 hours, etc.).  We then discretized this variable into 20-minute bins and computed the entropy of the empirical frequency distribution over these bins. A lower entropy score indicated less variability in the times of day a user started their exercises. 
+
+The entropy score might also give an indication for context effects on users' memory. A user practicing exercises more regularly is more likely to be in the same physical location when using the app, which might result in better memory of previously studied words \cite{godden1975context}.
 
 \subsubsection{Positional features}
 
@@ -204,7 +207,7 @@ For each token (and root) we tracked user performance through four weighted
 error averages. At the user's first encounter of the token, each error term $E$ starts at
 zero. After an encounter with an instance of the token with label $L$ (0 for
 success, 1 for error), it is
-updated according to the equation
+updated according to the equation:
 
 \[
 E \leftarrow E + \alpha (L - E)
@@ -282,7 +285,7 @@ the all-language model to form our final predictions.
 
 To tune model hyper-parameters and evaluate the usefulness of features, we first
 trained the models on the {\tt train} data set and evaluated them on the {\tt dev}
-data set. Once the model structure was finalized, we trained on the combined
+data set. \hl{Anselm: if space permits, mention what the train, dev, and test data sets look like? e.g.:  80\% of each user's exercises are in train, 10\% in each of dev and test.} Once the model structure was finalized, we trained on the combined
 {\tt train} and {\tt dev} data and produced predictions for the {\tt test} data. The
 LightGBM hyperparameters used for each model are listed in Table~\ref{lightgbm-params}.
 
@@ -290,6 +293,7 @@ LightGBM hyperparameters used for each model are listed in Table~\ref{lightgbm-p
 
 \subsection{Performance}
 
+\hl{Anselm: mention AUROC of baseline model for comparison? shall the reader be impressed by our performance. perhaps also mention the winner's score (the deep learning team) for commparison, to show that our score was not that much worse? `we were 0.01 behind the deep learning model' sounds cooler to me than `we were third'}
 The AUROC of our final predictions was $.8585$ on {\tt en\_es}, $.8350$ on {\tt
   es\_en}, and $.8540$ on {\tt fr\_en}. We did not attempt to optimize the model's
 F1 score, but the F1 score could likely be improved (at the cost of
@@ -315,20 +319,19 @@ our model's predictions, we conducted a set of experiments in which we lesioned
 set, evaluating performance on the {\tt dev} set. For simplicity, we ran each of the
 lesioned models on all language data and report the average
 performance. We did not run individual-language models as we did for our primary model.
-
 The results of the lesion experiments are shown in Figure~\ref{fig:lesions}. The
 models are as follows.
 \begin{description}
-  \item[none:] all features are included.  
-  \item[user:] all user-level features, including the user ID and other
+  \item[none:] All features are included.  
+  \item[user:] All user-level features, including the user ID and other
     calculated features like entropy and measures of exercise bursts, are
     removed.
-  \item[userid \& user other:] only user ID or only the calculated
+  \item[userid \& user other:] Only user ID or only the calculated
     features user features, respectively, are removed.
   \item[word:] Token and token root IDs; previous, next, and dependency-tree
     root word IDs; and morphological, part of speech, and dependency tree
     features are removed. This does not include {\bf external} features listed below.
-  \item[word id \& word other:] only word IDs or only other
+  \item[word id \& word other:] Only word IDs or only other
     word features, respectively, are removed. {\bf word other} does not include {\bf external} features listed below.
   \item[neighbors:] Both word IDs and other word features are removed, but
     only for the previous, next, and dependency-tree root words. Information
@@ -368,25 +371,27 @@ including client, session type, format, and exercise duration. This model
 achieved an AUROC of $.787$, far lower than any other lesion. This points to the
 importance of how a question is asked for user performance, reflecting insights
 from psychology such as the difference between recall and recognition memory
-\cite{yonelinas2002nature}.
+\cite{yonelinas2002nature}. 
+\hl{Anselm: I don't understand the last sentence here.}
 
 \section{Discussion}
 
 When approaching the Duolingo SLAM task, we hoped to leverage psychological
-insights in building our model. We found that in some cases, such as using the
+insights in building our model. We found that in some cases, such as when using the
 word's age-of-acquisition, this was helpful. In general, though, our model gained its
 power not from hand-crafted features but from applying a powerful inference
-technique (gradient boosted decision trees) to raw input about user and word IDs and
+technique (gradient boosted decision trees) to raw input about user IDs, word IDs, and
 exercise features.
 
 There are multiple reasons for the limited applicability of psychology to this
-competition. First, computational psychological models, while useful, are not
-well-suited to generating highly accurate predictions from large data sets.
+competition. First, computational psychological models are typically designed based 
+on small laboratory data sets, which might limit their suitability for generating highly
+accurate predictions in big data settings.
 Because they are designed not for prediction but for explanation, they tend to
 use a small number of input variables and allow those variables to interact
 in limited ways. In contrast, gradient boosted decision trees, as well as other
 cutting-edge techniques like deep learning can extract high-level
-interactions among hundreds of features. Though they are highly opaque, require
+interactions among hundreds of features. While they are highly opaque, require
 a lot of data, and are not amenable to explanation, these models excel at prediction.
 
 Second, it is possible that our ability to use theories of learning, including
@@ -394,22 +399,25 @@ ideas about massed and spaced practice, was disrupted by the fact that the data
 may have been adaptively created using these very principles
 \cite{settles2016trainable}. If Duolingo adaptively sequenced the spacing of
 trials based on past errors, then the relationship between future errors and
-past spacing may have differed from that found in the psychological literature
+past spacing may have substantially differed from that found in the psychological literature
 \cite{Cepeda:2006aa}.
 
-Finally, a task in which broader generalization was required might have
-allowed psychologically inspired features to perform more competitively. In this
+Finally, if the task had required broader generalization, psychologically inspired 
+features might have performed more competitively. In the SLAM
 task, there is a large amount of labeled training data for every user and for
-most words. This allow simple ID-based features to work because the past
-history of a user will likely influence their future performance. However, for a
-newly-encountered user or word, such an ID is useless because there will not be
-enough data to estimate the relevant parameter. Theory-driven features, in
-contrast, can often generalize to new settings because they capture more
-generic aspects of the learning task.  For example, if we were asked to generalize to
+most words. This allows simple ID-based features to work because the past
+history of a user will likely influence their future performance. However, with
+ ID-based features there is no way to generalize to newly-encountered users or 
+ words, which have an ID that was not in the training set. The learned 
+ID-based knowledge is useless here because there is no way to generalize from one 
+unique ID to another. Theory-driven features, in
+contrast, can often generalize to new settings because they capture aspects that 
+are shared across (subsets of) users, words, or situations of the learning task.  For example, if we were asked to generalize to
 a completely new language such as German, many parts of our model would falter
 but word frequency, age of acquisition, and Levenshtein distance to
 first-language translation would still likely prove to be features which
 have high predictive utility.
+\hl{I like that sentence! Bam take that, deep learning}
 
 In sum, we believe that the Duolingo SLAM dataset and challenge provide
 interesting opportunities for cognitive science and psychology. 
@@ -419,7 +427,7 @@ Then, complementary laboratory-scale studies can be conducted which
 establish the causal status of such features through controlled experimentation.
 Conversely, insights from controlled experiments can be used to generate
 new features that aid predictive models on naturalistic datasets. This type of
-two-way interaction could lead to long-run improvements in both causal
+two-way interaction could lead to long-run improvements in both scientific
 explanation and real-world prediction.
 
 \section{Acknowledgments}
